# multiobjective

./: .gitattributes  .gitignore  Chebyshev_lambdas_mobj_CNN.ipynb  LICENSE  README.md  chebyshev_churn.ipynb  chebyshev_cnn.ipynb  chebyshev_cnn_cifar10.ipynb  chebyshev_cnn_mnist.ipynb  churn.ipynb  environment.yml  main.py  multiobjetivo.ipynb  pyproject.toml  requirements.txt  requirements_sem_medmnist.txt
conf/: config.yaml
conf/loader/: mnist.yaml
notebooks/: Mnist_experiments.ipynb  geneticalgorithm.ipynb  mnist.ipynb
scripts/: run_ga.py
src/: genetic_algorithm.py  individual.py
src/multiobjective/data/: mnist.py  protocols.py
tests/: conftest.py
tests/data/: test_dataloader.py
