[project]
name = "multiobjective"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
show-fixes = true

# Files / folders to ignore
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
    "C4",  # comprehensions
]

ignore = [
    "E501",  # line length handled by formatter
    "N803", # argument name should be lowercase
    "N806", # variable in function should be lowercase
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
omit = [
"*/protocols.py",
]

